services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
  namespace: prod
spec:
  selector:
    app: rollouts-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
  namespace: prod
spec:
  selector:
    app: rollouts-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
