gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rollout-gateway
  namespace: prod
spec:
  selector:
    istio: ingressgateway   # use Istio ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - dev.newenergy.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: dev-newenergy-tls  
    hosts:
    - dev.newenergy.com
